--- a/src/layouts/AppLayout/AppLayout.module.scss
+++ b/src/layouts/AppLayout/AppLayout.module.scss
@@ -17,8 +17,10 @@
     @include fz(16);
     padding: 12px;
   }
+  opacity: 0;
 
   &:focus {
+    opacity: 1;
     z-index: calc(var(--zindex-header) + 1);
   }
 }
@@ -34,4 +36,6 @@
   flex: 1;
   flex-direction: column;
   overflow: hidden;
+  padding-top: 52px;
+  padding-bottom: 120px;
 }
