--- a/src/components/CategoryTags/CategoryTags.module.scss
+++ b/src/components/CategoryTags/CategoryTags.module.scss
@@ -8,8 +8,8 @@
 .categoryTags__list {
   display: flex;
   align-items: center;
-  justify-content: center;
   padding: 2px 0;
+  margin-left: -13px;
 }
 
 .categoryTags__tag[type="button"] {
