--- a/src/layouts/Header/Header.astro
+++ b/src/layouts/Header/Header.astro
@@ -2,6 +2,7 @@
 import styles from "./Header.module.scss"
 
 import { getPath, testPath } from "@/utils"
+import Container from "../Container/Container.astro"
 
 const nav = [
   {
@@ -26,25 +27,27 @@ const getIsCurrent = (path: string) => path === pathname || path === pathname.re
 ---
 
 <header class={styles.header}>
-  <LogoTag class={styles.logo}>
-    <a href={getPath.top}>A11y Practice</a>
-  </LogoTag>
-  <nav class={styles.nav} aria-label={"サイトメニュー"}>
-    <ul class={styles.list}>
-      {
-        nav.map(({ name, path }) => (
-          <li class={styles.item}>
-            <a
-              href={path}
-              class={styles.link}
-              data-current={`${getIsCurrent(path)}`}
-              aria-current={getIsCurrent(path) ? "page" : "false"}
-            >
-              {name}
-            </a>
-          </li>
-        ))
-      }
-    </ul>
-  </nav>
+  <Container className={"flex justify-between align-middle"}>
+    <LogoTag class={styles.logo}>
+      <a href={getPath.top}>A11y Practice</a>
+    </LogoTag>
+    <nav class={styles.nav} aria-label={"サイトメニュー"}>
+      <ul class={styles.list}>
+        {
+          nav.map(({ name, path }) => (
+            <li class={styles.item}>
+              <a
+                href={path}
+                class={styles.link}
+                data-current={`${getIsCurrent(path)}`}
+                aria-current={getIsCurrent(path) ? "page" : "false"}
+              >
+                {name}
+              </a>
+            </li>
+          ))
+        }
+      </ul>
+    </nav>
+  </Container>
 </header>
