--- a/src/components/CardsWithPaginationFilter/CardsWithPaginationFilter.astro
+++ b/src/components/CardsWithPaginationFilter/CardsWithPaginationFilter.astro
@@ -1,4 +1,5 @@
 ---
+import Container from "@/layouts/Container/Container.astro"
 import type { CardProps } from "../Card/Card.astro"
 import Card from "../Card/Card.astro"
 import CategoryTags from "../CategoryTags/CategoryTags.astro"
@@ -17,7 +18,7 @@ const { cards, categories, perPage = 6 } = Astro.props
 
 <div id="js-paginationWithFilter" class={styles.cardsWithPaginationFilter} data-per-page={perPage}>
   <CategoryTags categories={categories} />
-  <div id="js-articlesWrap" class:list={[styles.cardsWithPaginationFilter__cards, "mt-[12px] lg:mt-[21px]"]}>
+  <div id="js-articlesWrap" class:list={[styles.cardsWithPaginationFilter__cards, "mt-[42px]"]}>
     {cards.map((card) => <Card {...card} />)}
     <div class={styles.cardsWithPaginationFilter__skeletonCards}>
       {Array.from({ length: perPage }).map((_) => <div class:list={[styles.skeletonCard, "js-skeletonCard"]} />)}
