--- a/src/components/Profile/Profile.astro
+++ b/src/components/Profile/Profile.astro
@@ -11,21 +11,23 @@ const { className } = Astro.props
 ---
 
 <div class:list={[styles.profile, className]}>
-  <div class={styles.image_wrap}>
-    <img src="/cat.webp" alt="" loading="lazy" decoding="async" width={640} height={635} />
-  </div>
-  <div class={styles.content}>
-    <h3 class={styles.heading}>山田 太郎</h3>
-    <p class={styles.desc}>デザイナー・エンジニア</p>
-    <div class={styles.social_Links}>
-      <a href="https://twitter.com/astrodotbuild" target="_blank">
-        <span class="sr-only">AstroのTwitterへ</span>
-        <IconTwitter />
-      </a>
-      <a href="https://github.com/withastro/astro" target="_blank">
-        <span class="sr-only">AstroのGithubリポジトリへ</span>
-        <IconGIthub />
-      </a>
+  <div class={styles.inner}>
+    <div class={styles.image_wrap}>
+      <img src="/cat.webp" alt="" loading="lazy" decoding="async" width={640} height={635} />
+    </div>
+    <div class={styles.content}>
+      <h3 class={styles.heading}>山田 太郎</h3>
+      <p class={styles.desc}>デザイナー・エンジニア</p>
+      <div class={styles.social_Links}>
+        <a href="https://twitter.com/astrodotbuild" target="_blank">
+          <span class="sr-only">AstroのTwitterへ</span>
+          <IconTwitter />
+        </a>
+        <a href="https://github.com/withastro/astro" target="_blank">
+          <span class="sr-only">AstroのGithubリポジトリへ</span>
+          <IconGIthub />
+        </a>
+      </div>
     </div>
   </div>
 </div>
