--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -2,8 +2,10 @@
 @use "@/assets/styles/global" as *;
 
 .profile {
+}
+
+.inner {
   display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 32px;
 }
@@ -12,10 +14,7 @@
   overflow: hidden;
   aspect-ratio: 640 / 635;
   border-radius: 50%;
-
-  @include mq(md) {
-    width: calc(35% - 20px / 2);
-  }
+  width: 140px;
 
   img {
     width: 100%;
@@ -25,12 +24,8 @@
   }
 }
 
-.content {
-  text-align: center;
-}
-
 .heading {
-  @include fz(32);
+  @include fz(24);
 }
 
 .desc {
@@ -40,7 +35,7 @@
 
 .social_Links {
   display: flex;
-  justify-content: center;
+  margin-left: -10px;
 
   & > a {
     display: block;
