--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,21 +15,21 @@ const meta = {
 ---
 
 <AppLayout meta={meta}>
-  <Container>
-    <section>
-      <Heading className={"justify-center"}>プロフィール</Heading>
-      <Profile className={"mt-[32px]"} />
-    </section>
-  </Container>
+  <section class={"bg-white"}>
+    <Container size={"md"}>
+      <h2 class={"sr-only"}>プロフィール</h2>
+      <Profile className={"py-[60px]"} />
+    </Container>
+  </section>
 
-  <Container>
-    <section class={"mt-[120px]"}>
-      <Heading className={"justify-center"}>記事一覧</Heading>
+  <Container size={"md"}>
+    <section class={"mt-[42px]"}>
+      <h2 class={"sr-only"}>記事一覧</h2>
       <CardsWithPaginationFilter cards={posts} categories={categories} />
     </section>
   </Container>
 
-  <h1 class="title">アコーディオン実装例</h1>
+  <!-- <h1 class="title">アコーディオン実装例</h1>
   <div class="accordion">
     <h2 class="accordion-header">
       <button type="button" class="accordion-trigger" aria-expanded="false" aria-controls="accordion-panel-1">
@@ -56,9 +56,9 @@ const meta = {
     <div id="accordion-panel-3" class="accordion-panel" hidden="until-found">
       <p class="accordion-panel__text">検索するとヒットします。</p>
     </div>
-  </div>
+  </div> -->
 </AppLayout>
-
+<!--
 <style>
   button {
     border-style: none;
@@ -153,4 +153,4 @@ const meta = {
       trigger?.setAttribute("aria-expanded", "true")
     })
   })
-</script>
+</script> -->
