--- a/src/components/Profile/Profile.astro
+++ b/src/components/Profile/Profile.astro
@@ -20,11 +20,11 @@ const { className } = Astro.props
       <p class={styles.desc}>デザイナー・エンジニア</p>
       <div class={styles.social_Links}>
         <a href="https://twitter.com/astrodotbuild" target="_blank">
-          <span class="sr-only">AstroのTwitterへ</span>
+          <span class="sr-only">Twitter</span>
           <IconTwitter />
         </a>
         <a href="https://github.com/withastro/astro" target="_blank">
-          <span class="sr-only">AstroのGithubリポジトリへ</span>
+          <span class="sr-only">GitHub</span>
           <IconGIthub />
         </a>
       </div>
