--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import CardsWithPaginationFilter from "@/components/CardsWithPaginationFilter/CardsWithPaginationFilter.astro"
-import Heading from "@/components/Heading/Heading.astro"
 import AppLayout from "@/layouts/AppLayout/AppLayout.astro"
 import Container from "@/layouts/Container/Container.astro"
 import Profile from "@/components/Profile/Profile.astro"
@@ -16,15 +15,15 @@ const meta = {
 
 <AppLayout meta={meta}>
   <section class={"bg-white"}>
+    <h2 class="sr-only">プロフィール</h2>
     <Container size={"md"}>
-      <h2 class={"sr-only"}>プロフィール</h2>
       <Profile className={"py-[60px]"} />
     </Container>
   </section>
 
   <Container size={"md"}>
     <section class={"mt-[42px]"}>
-      <h2 class={"sr-only"}>記事一覧</h2>
+      <h2 class="sr-only">記事一覧</h2>
       <CardsWithPaginationFilter cards={posts} categories={categories} />
     </section>
   </Container>
